fixing z-index

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ color: #FFFFFF;
 .holologo{
     position: fixed;
     width: 70%;
-    z-index: 11;
+    z-index: 4;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 15%;
